# hexa-antimatter

./: .roadmap.hexa_antimatter  AGENTS.tape  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  FAQ.md  LICENSE  LIMIT_BREAKTHROUGH.md  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md  SECURITY.tape  TAPE-AUDIT.md  hexa.toml
cli/: hexa-antimatter.hexa
factory/: antimatter-factory.md
firmware/doc/: README.md
firmware/hdl/: README.md
firmware/kicad/atomic_clock/: README.md
firmware/kicad/pet_cyclotron/: README.md
firmware/kicad/tabletop_penning/: README.md
firmware/kicad/thrust_acquisition/: README.md
firmware/mcu/: Cargo.toml
pet_cyclotron/: pet-cyclotron.md
selftest/: selftest.hexa
tabletop/: tabletop-antimatter.md
tests/: test_calculators.hexa  test_verify_all.hexa
verify/: all.hexa  falsifier_check.hexa  lint_numerics.hexa  run_all.hexa  saturation_check.hexa
